# hacksense-rest-api-rs

./: .gitignore  Cargo.toml  import.sh  import.sql
migrations/2020-01-23-193727_create_events/: up.sql
src/: main.rs  models.rs  schema.rs
templates/: history.html  history.xml  home.html  rss.xml  status.html  status.xml
