[package]
name = "hacksense-rest-api-rs"
version = "0.1.0"
authors = ["András Veres-Szentkirályi <vsza@vsza.hu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["sqlite", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.9.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
askama = "0.8"
actix-web = "2"
actix-rt = "1"
hmac = "0.7.1"
sha2 = "0.8.1"
hex = "0.4"
chrono = "0.4"
mime = "0.3"
